--- a/benchmarks/src/dotp/haskell/dotp.cabal
+++ b/benchmarks/src/dotp/haskell/dotp.cabal
@@ -32,7 +32,7 @@ executable dotp
         , vector                == 0.10.*
 
   ghc-options:
-        -Wall -O3 -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
+        -Wall -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
         -funfolding-use-threshold100 -funfolding-keeness-factor100
 
   default-language:     Haskell2010
