canny benchmark wibbles

--- a/benchmarks/src/canny/accelerate/canny.cabal
+++ b/benchmarks/src/canny/accelerate/canny.cabal
@@ -3,7 +3,7 @@ version:                0.1.0.0
 -- synopsis:
 -- description:
 -- license:
-license-file:           LICENSE
+-- license-file:           LICENSE
 author:                 Trevor L. McDonell
 maintainer:             tmcdonell@cse.unsw.edu.au
 -- copyright:
