Add accelerate-lulesh submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "benchmarks/src/accelerate"]
 	path = benchmarks/src/accelerate
 	url = https://github.com/AccelerateHS/accelerate.git
+[submodule "benchmarks/src/lulesh"]
+	path = benchmarks/src/lulesh
+	url = git@github.com:tmcdonell/accelerate-lulesh.git
